Overflow fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -38,7 +38,3 @@ html,
 body {
   width: 100%;
 }
-
-* {
-  outline: 1px solid red;
-}
